Finished the battle betting (betting logic, animations, saving, etc!)